<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@color/colorBlack"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginLeft="-6dp"
                android:background="@drawable/triangle"
                android:rotation="90"
                android:scaleX="1.4"
                android:scaleY="1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratalternates_bold"
                android:text="@string/str_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratalternates_bold"
                android:text="@string/str_mail"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:id="@+id/iv_Home"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_home_black_24dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_navHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="@string/str_home"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@color/colorGrey"
            android:scaleY="0.5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_shopping_cart_black"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="@string/str_cart"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@color/colorGrey"
            android:scaleY="0.5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_person_black_24dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_Profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="@string/str_profile"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@color/colorGrey"
            android:scaleY="0.5" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_order"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_Orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="@string/str_orders"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@color/colorGrey"
            android:scaleY="0.5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_home_black_24dp"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="@string/str_about"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_alignParentBottom="true"
            android:alpha="0.5"
            android:background="@color/colorGrey"
            android:scaleY="0.5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_logout"
            android:rotation="90"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/side_navLogout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserratalternates_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:text="Logout"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>


</LinearLayout>