<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:gravity="center">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_42sdp"
                android:layout_marginLeft="@dimen/_42sdp"
                android:layout_toStartOf="@id/searchIcon"

                android:layout_toLeftOf="@id/searchIcon"
                android:background="@drawable/spinner_background"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="#8F8F8F"
                android:textSize="@dimen/_13sdp"
                android:visibility="visible"
                app:defaultQueryHint="@string/looking"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/white"
                app:queryHint="@string/looking"
                app:searchIcon="@null" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/store"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginRight="@dimen/_35sdp"
                android:src="@drawable/ic_search"
                android:visibility="invisible"
                app:tint="@color/colorWhite" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_round_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/_30sdp"
                        android:paddingLeft="@dimen/_30sdp"
                        android:paddingTop="@dimen/_30sdp"
                        android:paddingEnd="@dimen/_30sdp"
                        android:paddingRight="@dimen/_30sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/_18sdp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/find_the_perfect_dessert_for_your_next_meal"
                            android:textColor="@color/colorBlackLight"
                            android:textSize="@dimen/_11sdp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:background="?android:attr/selectableItemBackground"
                                android:gravity="start"
                                android:text="Top deals"
                                android:textAllCaps="true"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/_14sdp" />

                            <TextView
                                android:id="@+id/topdealseeall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginEnd="@dimen/_20sdp"
                                android:layout_marginRight="@dimen/_20sdp"
                                android:background="?android:attr/selectableItemBackground"
                                android:gravity="end"
                                android:text="See all"
                                android:textAllCaps="false"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_14sdp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_double_arrow"
                                app:tint="@color/colorPrimary" />
                        </RelativeLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_deals_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:visibility="gone" />


                    <include layout="@layout/item_top_deals"/>
                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:visibility="gone"
                        android:layout_margin="@dimen/_10sdp"
                        android:clipToPadding="false"
                        android:foregroundGravity="center"
                        android:overScrollMode="always" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_30sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingRight="@dimen/_30sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start"
                        android:text="Featured products"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/seeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="end"
                        android:text="See all"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14sdp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_double_arrow"
                        app:tint="@color/colorPrimary" />
                </RelativeLayout>

                <include layout="@layout/item_feature_products" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rclView_Products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>